# todo-django

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
base/: urls.py  views.py
base/migrations/: 0001_initial.py
base/templates/base/: login.html  main.html  register.html  task.html  task_confirm_delete.html  task_form.html  task_list.html
todo/project/: settings.py
